force-app/main/default/objects/Property_Advance__c/fields/Third_Party_Corporate_Advance_Balance__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Corporate_Advance_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Third Party Corporate Advance Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>