force-app/main/default/objects/Property_Advance__c/fields/Title_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Company Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Advances</relationshipLabel>
    <relationshipName>Property_Advances</relationshipName>
    <type>Lookup</type>
</CustomField>