force-app/main/default/objects/Property_Advance__c/fields/Total_Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Basis__c</fullName>
    <label>Total Cost Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>