force-app/main/default/objects/Property_Advance__c/fields/Total_LTC_dollar__c.field-meta.xml
<CustomField>
    <fullName>Total_LTC_dollar__c</fullName>
    <label>Total LTC dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>