force-app/main/default/objects/Property_Advance__c/fields/Total_LTC_percent__c.field-meta.xml
<CustomField>
    <fullName>Total_LTC_percent__c</fullName>
    <label>Total LTC percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>