force-app/main/default/objects/Property_Advance__c/fields/Wire__c.field-meta.xml
<CustomField>
    <fullName>Wire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wire</label>
    <referenceTo>Wire__c</referenceTo>
    <relationshipLabel>Property Advances</relationshipLabel>
    <relationshipName>Property_Advances</relationshipName>
    <type>Lookup</type>
</CustomField>