force-app/main/default/objects/Property_Advance__c/fields/Wire_Date__c.field-meta.xml
<CustomField>
    <fullName>Wire_Date__c</fullName>
    <formula>IF( ISBLANK(Advance__r.Wire_Date__c),
Advance__r.Target_Advance_Date__c,
Advance__r.Wire_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wire Date</label>
    <type>Date</type>
</CustomField>