force-app/main/default/objects/Property_Advance__c/fields/Zoning_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Report_Fee__c</fullName>
    <label>Zoning Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>